# thinktank-report-archive

./: .gitignore  README.md  pyproject.toml
.baoyu-skills/baoyu-comic/: EXTEND.md
.baoyu-skills/baoyu-image-gen/: EXTEND.md
.baoyu-skills/baoyu-translate/: EXTEND.md
comic/weekly-tech-watch-sample/: analysis.md  storyboard.md
comic/weekly-tech-watch-v2/: analysis.md  storyboard.md
comic/weekly-tech-watch-v3/: analysis.md  storyboard.md
comic/weekly-tech-watch-v4/: analysis.md  storyboard.md
comic/weekly-tech-watch-v5/: analysis.md  storyboard.md
comic/weekly-tech-watch-v6/: analysis.md  storyboard.md
comic/weekly-tech-watch-v7/: analysis.md  storyboard.md
config/: priorities.yaml  search_profiles.yaml  topics.yaml
docs/: backfill_coverage_audit.md  implementation_plan.md  multi_agent_execution.md  retrieval_strategy.md  retrieval_strategy_export_2026-07-06.md  weekly_comic_generation.md
scripts/: check_weekly_comics.ps1  prepare_weekly_comics.ps1  render_weekly_brief.ps1  run_backfill_batch.ps1  run_daily.ps1  run_evaluate_sources.ps1  run_strategy_review.ps1  run_weekly.ps1
tests/: test_archive_and_brief.py  test_audit.py  test_backfill_controls.py  test_cli_errors.py  test_config_and_scoring.py  test_fetch_candidates.py  test_generic_parser.py  test_rand_parser.py  test_repository_policy.py  test_restore_state.py  test_state_and_dedupe.py  test_stepi_parser.py
thinktank_watch/: __init__.py  archive.py  audit.py  brief.py  cli.py  config.py  fetch.py  focus.py  kb.py  models.py  restore.py  scoring.py  state.py  summary.py
(+551 files in other folders)
